packages/docs/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --radius: 0.5rem;
  }

  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 240 10% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 5.9% 10%;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --card: 240 10% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }
}

@layer base {
  html,
  body {
    height: 100%;
  }
  body {
    display: flex;
    flex-direction: column;
  }
  body > main {
    flex: 1 0 auto;
  }

  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer utilities {
  .bg-fd-card {
    --fd-card: var(--fd-secondary);
    --tw-bg-opacity: 0.25;
  }
}

@layer components {
  /* Remove the background color on title bar */
  .fd-codeblock div:has(> figcaption) {
    background-color: transparent;
  }

  /* Fix height of empty lines */
  .fd-codeblock .line:empty:not(:last-child) {
    height: 1.5em;
  }

  /* Line & word highlighing */
  .fd-codeblock .highlighted-word,
  .fd-codeblock .line.highlighted {
    --highlight-color: var(--foreground);
    --highlight-opacity: 5%;
    background-color: hsl(var(--highlight-color) / var(--highlight-opacity));
  }
  .fd-codeblock .highlighted-word {
    border: none;
    box-shadow: 0 0 0 1.25px
      hsl(var(--highlight-color) / var(--highlight-opacity));
    border-radius: 4px;
  }

  /* Remove the corner radius on adjacent highlighted words */
  .fd-codeblock .highlighted-word + .highlighted-word {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    margin-left: 1px;
    padding-left: 0;
  }
  .fd-codeblock .highlighted-word:has(+ .highlighted-word) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    margin-right: 1px;
    padding-right: 0;
  }

  /* By default, every code block should expand to fit its contents.
    Fumadocs uses a max-height to prevent this behaviour, that we override by default
    but we can still use custom="compact" in the meta string in MDX to enable it back.
  */
  .fd-codeblock:not([custom~='compact']) pre.max-h-\[400px\] {
    max-height: unset;
  }
  /* Fix bottom padding of compact code blocks (applied at the wrong level) */
  .fd-codeblock[custom~='compact'] {
    pre {
      padding-block: 0;
    }
    code {
      padding-block: 1rem;
    }
  }

  /* Fix the mobile top navbar collapsing */
  #nd-subnav {
    flex-shrink: 0;
    /* https://github.com/47ng/nuqs/pull/1027#issuecomment-3007455946 */
    @apply fixed z-30 w-full;
  }
}

@layer components {
  #nd-nav[aria-label='Main'] {
    @apply lg:rounded-full;
  }
}

@layer components {
  button:hover .star,
  button:focus .star {
    fill: currentColor;
  }

  /* Fill the left siblings of the hovered/focused star */
  button:has(~ :hover) .star,
  button:has(~ :focus) .star {
    fill: currentColor;
  }
}

@layer components {
  number-flow-react::part(suffix) {
    @apply ml-0.5 text-sm font-medium text-muted-foreground;
  }
}

